#1128 fix layout problems on 'page'

--- a/src/TrueOrFalse.Frontend.Web.Nuxt/assets/site.less
+++ b/src/TrueOrFalse.Frontend.Web.Nuxt/assets/site.less
@@ -2963,3 +2963,7 @@ h1, h2, h3, h4 {
 ul, ol {
     text-align: left;
 }
+
+.page-container {
+    height: 100%;
+}
